fix: shadow cut off on floor in visible screen

--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ body {
   justify-content: center;
   align-items: center;
   justify-content: space-evenly;
-  width: 100%;
   height: 140px;
   -webkit-box-shadow: 0px -4px 3px #eeeee4;
   -moz-box-shadow: 0px -4px 3px #eeeee4;
